--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
       "android",
       "web"
     ],
-    "version": "1.0.0",
+    "version": "0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -24,7 +24,11 @@
       "**/*"
     ],
     "ios": {
+	    "bundleIdentifier": "fi.tamk.laiho.gamepointcounter",
       "supportsTablet": true
-    }
+    },
+	"android": {
+	  "package": "fi.tamk.laiho.gamepointcounter"
+	},
   }
 }
